--- a/README.mkd
+++ b/README.mkd
@@ -5,9 +5,34 @@ $ git clone git://github.com/tarruda/zsh-fuzzy-match.git $HOME/.zsh-fuzzy-match
 $ echo 'source $HOME/.zsh-fuzzy-match/fuzzy-match.zsh' >> $HOME/.zshrc
 ```
 
-###Usage
+###Basic Usage
 
 - press ^T (the default binding, you can override with something like 'bindkey "^P" fuzzy-match' before sourcing the main file)
 - type a filename
 - move cursor with arrows
 - use enter to accept
+
+###Configuration
+
+If the working directory contains a file named '.fuzzy-match-ignore', it will be
+read and the lines will be used as ignore patterns(zsh patterns) with the following
+rules:
+
+- If starts with a '/', the pattern is considered relative to the starting
+  directory instead of the directory currently being scanned
+- If ends with a '/', the pattern is a directory-ignore pattern(it wont descend
+  into directories that match the pattern)
+
+####Examples:
+
+Ignore all css files inside the 'compiled' directory in the project root:
+
+```
+/compiled/*.css
+```
+
+Ignore all .min.js/.min.css files:
+
+```
+*.min.(css|js)
+```
