Updated README with link to shelr demo

--- a/README.mkd
+++ b/README.mkd
@@ -57,3 +57,10 @@ Here's a good .global.fuzzy-match-ignore:
 *.pyc                # python compiled
 *.zwc                # zsh compiled
 ```
+
+###Shelr demo
+
+The recording is not perfect but it should give a good idea of what the widget
+is about:
+
+http://shelr.tv/records/512624c6966080252e00006f
